@@ -1,3 +1,7 @@
+2007-09-10  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gamma_inc.c (gamma_inc_CF): include finite precision of log term
+
 2007-08-30  Brian Gough  <bjg@network-theory.co.uk>
 
 	* psi.c (psi_complex_rhp): accumulate error, to allow for
